[gd_scene load_steps=7 format=3 uid="uid://dqg31ca0s6k53"]

[ext_resource type="Texture2D" uid="uid://d38ceuoo614k4" path="res://assets/bg.png" id="1_o5qli"]
[ext_resource type="Script" uid="uid://bg8pcht1uye5f" path="res://scenes/main.gd" id="1_sugp2"]
[ext_resource type="PackedScene" uid="uid://d136vqp4xokeo" path="res://scenes/birb.tscn" id="2_0wfyh"]
[ext_resource type="PackedScene" uid="uid://c5v6rv2j1pvex" path="res://scenes/pipe.tscn" id="2_tbgi4"]
[ext_resource type="PackedScene" uid="uid://ddywjjnxu6hvr" path="res://scenes/ground.tscn" id="4_jyhfs"]
[ext_resource type="PackedScene" uid="uid://3jugnxfq0bgd" path="res://scenes/game_over.tscn" id="6_tefeu"]

[node name="Main" type="Node"]
script = ExtResource("1_sugp2")
pipe_scene = ExtResource("2_tbgi4")

[node name="bg" type="Sprite2D" parent="."]
texture = ExtResource("1_o5qli")
offset = Vector2(432, 384)

[node name="birb" parent="." instance=ExtResource("2_0wfyh")]

[node name="Ground" parent="." instance=ExtResource("4_jyhfs")]
z_index = 1

[node name="pipetimer" type="Timer" parent="."]
wait_time = 1.5

[node name="ScoreLabel" type="Label" parent="."]
z_index = 2
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 25
text = "SCORE: "

[node name="GameOver" parent="." instance=ExtResource("6_tefeu")]

[connection signal="hit" from="Ground" to="." method="_on_ground_hit"]
[connection signal="timeout" from="pipetimer" to="." method="_on_pipetimer_timeout"]
[connection signal="restart" from="GameOver" to="." method="_on_game_over_restart"]
